Ver 0.2.02 Initial working version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,7 @@ export(.get_encode_dictionary)
 export(AddCumulativeRow)
 export(CheckDSConnections)
 export(CheckServerRequirements)
-export(ConnectToCCP)
-export(ConnectToVirtualCCP)
+export(ConnectToVirtualNetwork)
 export(DisplayTimeSeries)
 export(ExploreFeature)
 export(ExportPlot)
@@ -29,7 +28,6 @@ export(ds.CurateData)
 export(ds.DrawSample)
 export(ds.ExtractFromList)
 export(ds.FilterTable)
-export(ds.GetCohortDescription)
 export(ds.GetCrossTab)
 export(ds.GetCurationReport)
 export(ds.GetDataSetCheck)
