--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dsFredaClient
 Title: Federated Refinement, Exploration and Data Augmentation
-Version: 0.2.00
+Version: 0.2.02
 Authors@R: 
     person("Bastian", "Reiter", , "b.reiter@med.uni-frankfurt.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1088-0502"))
@@ -11,6 +11,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports:
+    assertthat,
     cli,
     dplyr,
     dsBaseClient (>= 6.3.0),
@@ -40,5 +41,5 @@ Depends:
 LazyData: true
 Remotes: 
     BastianReiter/CCPhosApp,
-    datashield/dsBaseClient,
     BastianReiter/dsFreda,
+    datashield/dsBaseClient
