Ver 0.2.03: First successful test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(.encode_tidy_eval)
 export(.get_encode_dictionary)
 export(AddCumulativeRow)
 export(CheckDSConnections)
-export(CheckServerRequirements)
 export(ConnectToVirtualNetwork)
 export(DisplayTimeSeries)
 export(ExploreFeature)
@@ -13,7 +12,6 @@ export(ExportPlot)
 export(GetEligibleValues)
 export(GetServerOpalInfo)
 export(GetServerWorkspaceInfo)
-export(LoadRawDataSet)
 export(MakeBoxPlot)
 export(MakeColumnPlot)
 export(MakeCurationReport)
@@ -21,11 +19,7 @@ export(MakeFunctionMessage)
 export(ModifyConnections)
 export(PrintMessages)
 export(PrintSoloMessage)
-export(QuickProcessingRun)
 export(UpdateLocalPackages)
-export(ds.AugmentData)
-export(ds.CurateData)
-export(ds.DrawSample)
 export(ds.ExtractFromList)
 export(ds.FilterTable)
 export(ds.GetCrossTab)
@@ -35,14 +29,12 @@ export(ds.GetFeatureInfo)
 export(ds.GetFrequencyTable)
 export(ds.GetObjectMetaData)
 export(ds.GetObjectStatus)
-export(ds.GetRDSValidationReport)
 export(ds.GetReportingObject)
 export(ds.GetSampleStatistics)
 export(ds.GetTTEModel)
 export(ds.GetTableCheck)
 export(ds.JoinTables)
+export(ds.MakeList)
 export(ds.MutateTable)
-export(ds.UnpackAugmentedDataSet)
-export(ds.UnpackCuratedDataSet)
-export(ggTheme_CCP)
-export(gtTheme_CCP)
+export(ggTheme)
+export(gtTheme)
