--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(ExploreFeature)
 export(ExportPlot)
 export(GetEligibleValues)
 export(GetServerOpalInfo)
+export(GetServerResourcesInfo)
 export(GetServerWorkspaceInfo)
 export(MakeBoxPlot)
 export(MakeColumnPlot)
@@ -20,6 +21,7 @@ export(MakeFunctionMessage)
 export(ModifyConnections)
 export(PrintMessages)
 export(PrintSoloMessage)
+export(Serialize)
 export(ds.ExtractFromList)
 export(ds.FilterTable)
 export(ds.GetCrossTab)
@@ -38,3 +40,9 @@ export(ds.MakeList)
 export(ds.MutateTable)
 export(ggTheme)
 export(gtTheme)
+import(assertthat)
+import(dplyr)
+import(purrr)
+import(stringr)
+import(tidyr)
+importFrom(magrittr,"%>%")
