Reworked some functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dsFredaClient
 Title: Federated Refinement, Exploration and Data Augmentation
-Version: 0.2.05
+Version: 0.2.07
 Authors@R: 
     person("Bastian", "Reiter", , "b.reiter@med.uni-frankfurt.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-1088-0502"))
@@ -17,6 +17,7 @@ Imports:
     dsBaseClient,
     DSI,
     DSOpal,
+    ggplot2,
     httr,
     lifecycle,
     magrittr,
@@ -31,7 +32,6 @@ Suggests:
     dsTidyverse,
     dsTidyverseClient,
     ggpattern,
-    ggplot2,
     gt,
     quarto,
     rmarkdown,
@@ -43,4 +43,5 @@ Depends:
 LazyData: true
 Remotes:
     BastianReiter/dsFreda,
+    datashield/dsBase,
     datashield/dsBaseClient
