Ver 0.2.09: Implemented GetServerResourcesInfo(), improved GetServerOpalDBInfo(), more bug fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(DisplayTimeSeries)
 export(ExploreFeature)
 export(ExportPlot)
 export(GetEligibleValues)
-export(GetServerOpalInfo)
+export(GetServerOpalDBInfo)
 export(GetServerResourcesInfo)
 export(GetServerWorkspaceInfo)
 export(MakeBoxPlot)
@@ -38,6 +38,7 @@ export(ds.GetTableCheck)
 export(ds.JoinTables)
 export(ds.MakeList)
 export(ds.MutateTable)
+export(ds.PrepareRawData)
 export(ggTheme)
 export(gtTheme)
 import(assertthat)
