--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ConnectToVirtualNetwork)
 export(DisplayTimeSeries)
 export(ExploreFeature)
 export(ExportPlot)
+export(GetCollectiveExploration)
 export(GetEligibleValues)
 export(GetServerOpalDBInfo)
 export(GetServerResourcesInfo)
