--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,8 @@ export(ConnectToVirtualNetwork)
 export(DisplayTimeSeries)
 export(ExploreFeature)
 export(ExportPlot)
-export(GetCollectiveExploration)
 export(GetEligibleValues)
+export(GetExplorationData)
 export(GetServerOpalDBInfo)
 export(GetServerResourcesInfo)
 export(GetServerWorkspaceInfo)
