Ver 0.2.16: Implemented cumulative life tables, grouping in ds.GetFrequencyTable and ds.GetSampleStatistics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(.encode_tidy_eval)
 export(.get_encode_dictionary)
 export(AddCumulativeRow)
 export(CheckDSConnections)
+export(ComputeSurvCI)
+export(ComputeSurvHaz)
 export(ConnectToVirtualNetwork)
 export(DisplayTimeSeries)
 export(ExploreFeature)
@@ -23,6 +25,7 @@ export(ModifyConnections)
 export(PrintMessages)
 export(PrintSoloMessage)
 export(Serialize)
+export(ds.CreateSurvObject)
 export(ds.ExtractFromList)
 export(ds.FilterTable)
 export(ds.GetCrossTab)
